# OPtimized-AutoClicker

./: .gitignore  Cargo.toml  LICENSE  README.md  autoclicker_settings.toml  build.bat  build.rs  check.bat
.github/workflows/: manual-build.yml
src/: main.rs
