[package]
name = "rust_autoclicker"
version = "2.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Media",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_Security",
]